rename the homepage

--- a/coffeeMain.html
+++ b/coffeeMain.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   <header>
-  <a class="button" href="#" style="text-decoration:none" >&laquo</a>
+  <a class="button" href="home.html" style="text-decoration:none" >&laquo</a>
   <header>
   <aside>
   </aside>
