--- a/coffeeMain.html
+++ b/coffeeMain.html
@@ -56,9 +56,9 @@
               <th colspan="4" style="text-align:center; font-family:'Edwardian Script ITC'; font-size: 60px;">Cup Size</th>
           </tr>
           <tr>
-              <td><button id="small">Small</button></td>
-              <td><button id="medium">Medium</button></td>
-              <td><button id="large">Large</button></td>
+              <td><button class="size" id="small">Small</button></td>
+              <td><button class="size" id="medium">Medium</button></td>
+              <td><button class="size" id="large">Large</button></td> 
               <td></td>
               <td></td>
           </tr>
@@ -66,19 +66,19 @@
               <th colspan="4" style="text-align:center; font-family:'Edwardian Script ITC'; font-size: 60px;">Sugar</th>
           </tr>
           <tr>
-              <td><button id="halfSpoon">&frac12; Spoon</button></td>
-              <td><button id="oneSpoon">1 Spoon</button></td>
-              <td><button id="oneHalfSpoon">&frac34; Spoon</button></td>
-              <td><button id="twoSpoon">2 Spoons</button></td>
-              <td><button id="noSugar">None</button></td>
+              <td><button class="spoon" id="halfSpoon">&frac12; Spoon</button></td>
+              <td><button class="spoon" id="oneSpoon">1 Spoon</button></td>
+              <td><button class="spoon" id="oneHalfSpoon">&frac34; Spoon</button></td>
+              <td><button class="spoon" id="twoSpoon">2 Spoons</button></td>
+              <td><button class="spoon" id="noSugar">None</button></td>
           </tr>
           <tr>
               <th colspan="4" style="text-align:center; font-family:'Edwardian Script ITC'; font-size: 60px;">Milk/Cream</th>
           </tr>
           <tr>
-              <td><button id="milk">Milk</button></td>
-              <td><button id="cream">Cream</button></td>
-              <td><button id="noMilk">None</button></td>
+              <td><button class="milk" id="milk">Milk</button></td>
+              <td><button class="milk" id="cream">Cream</button></td>
+              <td><button class="milk" id="noMilk">None</button></td>
               <td></td>
               <td></td>
           </tr>
@@ -86,15 +86,16 @@
               <th colspan="4" style="text-align:center; font-family:'Edwardian Script ITC'; font-size: 60px;">Coffee</th>
           </tr>
           <tr>
-            <td><button id="cappacino">Cappacino</button></td>
-            <td><button id="mocha">Mocha</button></td>
-            <td><button id="mocha">Expresso</button></td>
-            <td><button id="classic">Classic</button></td>
+            <td><button class="coffeflavor" id="cappacino">Cappacino</button></td>
+            <td><button class="coffeflavor" id="mocha">Mocha</button></td>
+            <td><button class="coffeflavor" id="mocha">Expresso</button></td>
+            <td><button class="coffeflavor" id="classic">Classic</button></td>
              <td></td>
           </tr>
           <tr>
               <td></td>
               <td> <button id="reset" style="margin:50px 0 0 0" >Reset</button> </td>
+              <td> <button id="getTotal" style="margin:50px 0 0 0">getTotal</button> </td>
               <td> <button id="addOrder" style="margin:50px 0 0 0" >Add New Order</button></td>
               <td></td>
               <td></td>
@@ -139,7 +140,6 @@
           <button id="checkout" onclick="checkout()">Checkout</button>
       </div>
     <!--End of all the codes-->
-  <script src="script.js">
-  </script>
+  <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
