most of the javascript complete

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
             </div>
       <div class="divbutton">
         <a class="button" href="coffeeMain.html">
-          Order a Coffee
+          Enter
         </a>
       </div>
     </section>
