made the homepage responsive need to work on the  other page and javascript

--- a/home.html
+++ b/home.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>
-      Home
+      HomePage
   </title>
   <link href="home.css" rel="stylesheet" />
   <meta charset="utf-8" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   </head>
   <body>
       <div class="mainbody">
@@ -17,13 +18,13 @@
         E
       </span>
        <span class="letter" data-letter="C">
-          C
+        C
         </span>
         <span class="letter" data-letter="A">
-           A
+        A
         </span>
         <span class="letter" data-letter="F">
-            F
+        F
         </span>
     </header>
       <div class="title">
@@ -39,12 +40,17 @@
             </div>
       <div class="divbutton">
         <a class="button" href="coffeeMain.html">
-          Enter
+          Order a Coffee
         </a>
       </div>
     </section>
     </div>
-    <!--End of all the codes-->
+      <!--End of all the codes-->
+      <script type="text/javascript">
+          $(window).load(function () {
+              $("body").fadeIn(2000);
+          });
+      </script>
  
     
   </body>
